# polyglot_tictactoe

./: README.md
.github/workflows/: c.yml  python.yml
c/: CMakeLists.txt  README.md  game.c  game.h  game_SDL.c  game_SDL.h  game_test.c  game_text.c  game_tools.c  game_tools.h
python/: README.md
python/src/: CLI.py  GUI.py
python/src/tictactoe/: Case.py  Grid.py  __init__.py  const.py
python/tests/: test_tictactoe.py
rust/src/: lib.rs  main.rs  shapes.rs
